--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
+    "firebase-tools": "^7.10.0",
     "now": "^16.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
